examples/expected/check_invalid_continue.txt
error[E4002]: continue outside of loop
  --> examples/invalid_continue.tp:1:1
   |
 1 | fn main() {
   | ^
